# p3a

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  DEBUG_PERFORMANCE_INSTRUCTIONS.md  IMPLEMENTATION_TASK.md  INFRASTRUCTURE.md  LICENSE  LICENSING.md  Physical_Player_Integration.md  README.md  README2.md  README3.md  README4.md  README5.md  README_.md  README_TESTING.md  ROADMAP.md  build_and_test.ps1  build_log.txt  how 532a17f --stat  monitor_err.txt  monitor_log.txt  monitor_output.txt  partitions.csv  release_notes.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old  sdkconfig.old_deprecated  test.h
components/animated_gif_decoder/: CMakeLists.txt  gif_animation_decoder.c  gif_animation_decoder.cpp
components/animated_gif_decoder/include/: AnimatedGIF.h
components/animation_decoder/: CMakeLists.txt  Kconfig  bmp_animation_decoder.c  idf_jpeg_release_null_fix.c  jpeg_animation_decoder.c  jpeg_animation_decoder_sw.c  jpeg_decoder_internal.h  png_animation_decoder.c  static_image_decoder_common.h  webp_animation_decoder.c
components/animation_decoder/include/: animation_decoder.h  animation_decoder_internal.h
components/art_institution/: CMakeLists.txt  art_institution.c  art_institution_download.c  art_institution_internal.h  art_institution_rate_limit.c  art_institution_refresh.c  art_institution_resolve.c
components/art_institution/include/: art_institution.h  art_institution_types.h
components/art_institution/museums/: artic.c  common.c  ham.c  loc.c  smk.c  (+4 more)
components/channel_manager/: CMakeLists.txt  Kconfig  animation_metadata.c  channel_cache.c  channel_cache_evict.c  channel_cache_internal.h  channel_cache_merge.c  channel_cache_ops.c  channel_metadata.c  channel_player.c  channel_settings.c  download_manager.c  lai_verify.c  load_tracker.c  makapix_channel_events.c  makapix_channel_impl.c  makapix_channel_internal.h  makapix_channel_refresh.c  makapix_channel_utils.c  pcg32_reversible.h  play_navigator.c  playlist_manager.c  sdcard_channel.c  sdcard_channel_impl.c  vault_storage.c
components/giphy/: CMakeLists.txt  Kconfig  giphy_api.c  giphy_cache.c  giphy_download.c  giphy_refresh.c
components/graphics_mode/: CMakeLists.txt  graphics_mode.c  playback_engine.c
components/http_api/: CMakeLists.txt  favicon_data.h  http_api.c  http_api.h  http_api_internal.h  http_api_ota.c  http_api_page_network.c  http_api_page_root.c  http_api_page_seed.c  http_api_page_settings.c  http_api_pages.c  http_api_pico8.c  http_api_rest.c  http_api_rest_actions.c  http_api_rest_museum.c  http_api_rest_pinned.c  http_api_rest_playsets.c  http_api_rest_settings.c  http_api_rest_status.c  http_api_upload.c  http_api_utils.c  pico8_logo_data.h  surrogate_ui.h
components/http_fetch/: CMakeLists.txt  Kconfig  http_fetch.c
components/klipy/: CMakeLists.txt  Kconfig  klipy_api.c  klipy_cache.c  klipy_download.c  klipy_internal.h  klipy_refresh.c
components/makapix/: .gitignore  CMakeLists.txt  Kconfig  makapix.c  makapix.h  makapix_api.c  makapix_api.h  makapix_artwork.c  makapix_artwork.h  makapix_certs.c  makapix_certs.h  makapix_channel_switch.c  makapix_connection.c  makapix_internal.h  makapix_mqtt.c  makapix_mqtt.h  makapix_opc.c  makapix_opc.h  makapix_promoted_https.c  makapix_promoted_https.h  makapix_provision.c  makapix_provision.h  makapix_provision_flow.c  makapix_refresh.c  makapix_renewal.c  makapix_renewal.h  makapix_single_artwork.c  makapix_store.c  makapix_store.h  view_tracker.c  view_tracker.h
components/net/: CMakeLists.txt  idf_component.yml
components/ota_manager/: CMakeLists.txt  Kconfig  github_ota.c  github_ota.h  ota_manager.c  ota_manager_install.c  ota_manager_internal.h  ota_manager_webui.c
components/p3a_core/: CMakeLists.txt  connectivity_state.c  fresh_boot.c  fs_atomic.c  p3a_boot_logo.c  p3a_current_post.c  p3a_logo.c  p3a_pin_dispatcher.c  p3a_reaction_dispatcher.c  p3a_render.c  p3a_state.c  p3a_state_channel.c  p3a_state_connectivity.c  p3a_state_internal.h  p3a_touch_router.c  pie_memcpy_128.S  sd_health.c  sd_path.c
components/pico8/: CMakeLists.txt  Kconfig  pico8_audio.c  pico8_render.c  pico8_stream.c  pico8_stream_stubs.c
components/pin_lists/: CMakeLists.txt  pin_lists.c  pin_lists_copy.c  pin_lists_entry.c  pin_lists_internal.h  pin_lists_manifest.c  pin_lists_order.c  pin_lists_state.c
components/play_scheduler/: CMakeLists.txt  Kconfig  active_playset_store.c  play_scheduler.c  play_scheduler_buffers.c  play_scheduler_cache.c  play_scheduler_commands.c  play_scheduler_compat.c  play_scheduler_lai.c  play_scheduler_nae.c  play_scheduler_navigation.c  play_scheduler_pick.c  play_scheduler_playsets.c  play_scheduler_refresh.c  play_scheduler_switch.c  play_scheduler_swrr.c  play_scheduler_timer.c  playset_json.c  playset_store.c
components/player/: CMakeLists.txt
components/slave_ota/: CMakeLists.txt  Kconfig  slave_ota.c
components/ugfx/: CMakeLists.txt  gfx.h  gfxconf.h
main/: CMakeLists.txt  Kconfig.projbuild  animation_player.c  animation_player_loader.c  animation_player_pico8.c  animation_player_priv.h  animation_player_render.c  app_lcd_p4.c  app_main.c  app_touch.c  app_usb.c  app_wifi.c  channel_player.c  connectivity_service.c  content_service.c  display_fps_overlay.c  display_pin_overlay.c  display_ppa_upscaler.c  display_processing_notification.c  display_reaction_overlay.c  display_renderer.c  display_renderer_priv.h  display_upscaler.c  ffsystem_aligned.c  fs_init.c  idf_component.yml  p3a_main.c  pico8_stream.c  pico8_stream_stubs.c  pin_icon_img.c  pin_icon_img.h  playback_controller.c  playback_service.c  reaction_error_img.c  reaction_error_img.h  reaction_revoke_img.c  reaction_revoke_img.h  reaction_submit_img.c  reaction_submit_img.h  render_engine.c  (+13 more)
main/include/: animation_player.h  app_lcd.h  app_touch.h  app_usb.h  app_wifi.h  channel_player.h  connectivity_service.h  content_service.h  display_ppa_upscaler.h  display_renderer.h  fs_init.h  pico8_stream.h  playback_controller.h  playback_service.h  render_engine.h  sd_format.h  sdcard_channel.h  sntp_sync.h  ugfx_ui.h  version.h
(+816 files in other folders)
