idf_component_register(
    SRCS
        "graphics_mode.c"
    INCLUDE_DIRS
        "include"
    REQUIRES
        freertos
        esp_lcd
        p3a_hal
        storage
        waveshare__esp32_p4_wifi6_touch_lcd_4b
        ui
        player
        ui_mode_switch
        graphics_handoff
    PRIV_REQUIRES
        esp_lcd_touch
)

