idf_component_register(
    SRCS 
        "makapix_store.c"
        "makapix_provision.c"
        "makapix_mqtt.c"
        "makapix_artwork.c"
        "makapix.c"
        "makapix_certs.c"
    INCLUDE_DIRS 
        "."
    PRIV_INCLUDE_DIRS
        "${CMAKE_CURRENT_SOURCE_DIR}/../../main/include"
    REQUIRES 
        nvs_flash
        esp_http_client
        mqtt
        json
        fatfs
        driver
        esp-tls
        esp_wifi
        esp_netif
    PRIV_REQUIRES
        wifi_manager
    WHOLE_ARCHIVE
)

