idf_component_register(
    SRCS 
        "makapix_store.c"
        "makapix_provision.c"
        "makapix_mqtt.c"
        "makapix_api.c"
        "makapix_artwork.c"
        "makapix.c"
        "makapix_provision_flow.c"
        "makapix_connection.c"
        "makapix_certs.c"
        "view_tracker.c"
    INCLUDE_DIRS 
        "."
    PRIV_INCLUDE_DIRS
        "${CMAKE_CURRENT_SOURCE_DIR}/../../main/include"
    REQUIRES 
        nvs_flash
        esp_http_client
        mqtt
        json
        fatfs
        driver
        esp-tls
        esp_wifi
        esp_netif
        channel_manager
        p3a_core
        sdio_bus
        event_bus
    PRIV_REQUIRES
        wifi_manager
    WHOLE_ARCHIVE
)

# Add compiler definitions for version information
target_compile_definitions(${COMPONENT_LIB} PRIVATE
    FW_VERSION_STRING="${PROJECT_VER}"
    FW_VERSION_MAJOR=${FW_VERSION_MAJOR}
    FW_VERSION_MINOR=${FW_VERSION_MINOR}
    FW_VERSION_PATCH=${FW_VERSION_PATCH}
)
