idf_component_register(
    SRCS
        "p3a_state.c"
        "p3a_state_connectivity.c"
        "p3a_state_channel.c"
        "p3a_touch_router.c"
        "p3a_current_post.c"
        "p3a_reaction_dispatcher.c"
        "p3a_pin_dispatcher.c"
        "p3a_render.c"
        "p3a_logo.c"
        "p3a_boot_logo.c"
        "intro_anims/intro_anim_common.c"
        "intro_anims/intro_anim_registry.c"
        "intro_anims/ia_smoothstep_fade.c"
        "intro_anims/ia_pixel_dissolve.c"
        "intro_anims/ia_iris_wipe.c"
        "intro_anims/ia_assemble.c"
        "intro_anims/ia_scanline_reveal.c"
        "intro_anims/ia_bounce_drop.c"
        "intro_anims/ia_wave_settle.c"
        "intro_anims/ia_checker_tiles.c"
        "intro_anims/ia_pixel_rain.c"
        "intro_anims/ia_venetian.c"
        "intro_anims/ia_glitch_settle.c"
        "intro_anims/ia_typewriter.c"
        "intro_anims/ia_spiral_reveal.c"
        "intro_anims/ia_mosaic_shrink.c"
        "intro_anims/ia_color_emerge.c"
        "intro_anims/ia_starburst.c"
        "intro_anims/ia_plasma_dissolve.c"
        "intro_anims/ia_voronoi_shatter.c"
        "intro_anims/ia_hue_cycle_lock.c"
        "intro_anims/ia_blinds_flip.c"
        "intro_anims/ia_swirl_in.c"
        "intro_anims/ia_channel_merge.c"
        "sd_path.c"
        "sd_health.c"
        "fs_atomic.c"
        "fresh_boot.c"
    INCLUDE_DIRS
        "include"
    PRIV_INCLUDE_DIRS
        "."
        "intro_anims"
    REQUIRES
        esp_common
        freertos
        nvs_flash
        esp_timer
        config_store
        p3a_board_ep44b
        esp_netif
        lwip
        event_bus
    PRIV_REQUIRES
        json
)
